Fixed Contact section on home page, text was left aligned instead of center aligned. Added a new class to the CSS file to center align the text.

--- a/styles/style.css
+++ b/styles/style.css
@@ -494,7 +494,11 @@ nav a:hover {
     box-shadow: var(--colour-card-border) 0 2px 5px;
 }
 
-.contact-info a {
+#contact-info {
+    margin-bottom: 40px;
+}
+
+#contact-info a {
     text-decoration: none;
 }
 
@@ -592,7 +596,6 @@ footer {
 
 .contact-info {
     text-align: left;
-    margin-bottom: 40px;
 }
 
 .contact-info i {
